--- a/portfolio-site/src/components/Sidebar/index.scss
+++ b/portfolio-site/src/components/Sidebar/index.scss
@@ -1,69 +1,160 @@
-.navBar{
-    background: rgb(0, 0, 0);
-    width: 60px;
-    height: 100%;
-    position: absolute;
-    top:0;
-    z-index: 3;
-    min-width: none;
-    min-height: 500px;
+.navBar {
+  background: rgb(0, 0, 0);
+  width: 60px;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  z-index: 3;
+  min-width: none;
+  min-height: 500px;
 }
 
-.logo{
-    display: block;
-    padding: 8px 0;
+.logo {
+  display: block;
+  padding: 8px 0;
 
-    img{
-        display:block;
-        margin: 8px auto;
-        width: 50px;
-        height: auto;
+  img {
+    display: block;
+    margin: 8px auto;
+    width: 50px;
+    height: auto;
+  }
+}
+
+nav {
+  display: block;
+  text-align: center;
+  position: absolute;
+  height: 215px;
+  top: 50%;
+  margin-top: -120px;
+  width: 100%;
+
+  a {
+    font-size: 23px;
+    color: white;
+    display: block;
+    line-height: 51px;
+    height: 51px;
+    position: relative;
+    text-decoration: none;
+
+    i {
+      transition: all 0.3s ease-out;
     }
-}
 
-nav{
-    display: block;
-    text-align: center;
-    position: absolute;
-    height: 215px;
-    top: 50%;
-    margin-top: -120px;
-    width: 100%;
-    a{
-        font-size: 23px;
+    &:hover {
+      color: white;
+
+      svg {
+        opacity: 0;
+      }
+
+      &:after {
+        opacity: 1;
+      }
+    }
+
+    &:after {
+      content: '';
+      font-size: 8px;
+      letter-spacing: 2px;
+      position: absolute;
+      bottom: 0;
+      display: block;
+      width: 100%;
+      text-align: center;
+      opacity: 0;
+      transition: all 0.3s ease-out;
+    }
+
+    &:first-child {
+      &::after {
+        content: 'HOME';
+      }
+    }
+  }
+
+  a.aboutLink {
+    &:after {
+      content: 'ABOUT';
+    }
+  }
+  a.contactLink {
+    &::after {
+      content: 'CONTACT';
+    }
+  }
+
+  a.active {
+    svg {
+      color: blue($color: #28346e);
+    }
+  }
+}
+ul {
+  position: absolute;
+  bottom: 20px;
+  width: 100%;
+  display: block;
+  list-style-type: none;
+  padding: 0;
+  text-align: center;
+  margin: 0;
+
+  li {
+    a {
+      padding: 7px 0px;
+      display: block;
+      font-size: 16px;
+      line-height: 17px;
+      text-decoration: none;
+      position: relative;
+
+      i {
+        transition: all 0.3s ease-out;
+      }
+
+      &:hover {
         color: white;
+
+        svg {
+          opacity: 0;
+        }
+
+        &:after {
+          opacity: 1;
+        }
+      }
+
+      &:after {
+        content: '';
+        font-size: 11px;
+        letter-spacing: 2px;
+        position: absolute;
         display: block;
-        line-height: 51px;
-        height: 51px;
-        position: relative;
-        text-decoration: none;
+        bottom: 8px;
+        width: 100%;
+        text-align: center;
+        opacity: 0;
+        transition: all 0.3s ease-out;
+      }
 
-        i {
-            transition: all 0.3s ease-out;
+      &:first-child {
+        &::after {
+          content: 'LinkedIn';
         }
-
-        &:hover{
-            color: white;
-
-            svg {
-                opacity: 0;
-            }
-
-            &:after {
-                opacity: 1;
-            }
-        }
-
-        &:after{
-            content: 'salut';
-            font-size: 14px;
-            letter-spacing: 2px;
-            position: absolute;
-            bottom: 0;
-            display: block;
-            width: 100%;
-            text-align: center;
-            opacity: 0;
-        }
+      }
     }
+    a.github {
+      &:after {
+        content: 'GitHub';
+      }
+    }
+    a.resume {
+      &::after {
+        content: 'Resume';
+      }
+    }
+  }
 }
