--- a/portfolio-site/src/index.css
+++ b/portfolio-site/src/index.css
@@ -4,9 +4,9 @@ html {
 
 body {
   margin: 0;
-  font-family: 300 11px/1.4 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu',
-    'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', 'sans-serif';
-  background: #383838;
+  font: 300 11px/1.4 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell',
+    'Fira Sans', 'Droid Sans', 'Helvetica Neue', 'sans-serif';
+  background: #000000;
   overflow: hidden;
   display: block;
   -webkit-font-smoothing: antialiased;
