--- a/portfolio-site/src/components/Home/index.scss
+++ b/portfolio-site/src/components/Home/index.scss
@@ -1,4 +1,10 @@
-h1 {
-  color: white;
-  font-size: 50px;
+.homePage {
+  .textArea {
+    position: absolute;
+    left: 10%;
+    top: 50%;
+    transform: translateY(-50%);
+    width: 40%;
+    max-height: 90%;
+  }
 }
